api & client support for fetching selectors selectors
